WIP create handle message
